--- a/common/common.scss
+++ b/common/common.scss
@@ -4,9 +4,11 @@
 
 /* HIDE hide- TAGS IN UI */
 
+li.sidebar-section-link-wrapper[data-tag-name*='layout-'],
 li.sidebar-section-link-wrapper[data-tag-name*='hide-'],
+.tags-list.tag-list.tag-group-layout-tags,
 .tags-list.tag-list.tag-group-hide-with-tags,
-.tags-list.tag-list.tag-group-hiding-tags-unhide,
+.discourse-tag[href*='layout-'],
 .discourse-tag[href*='hide-'] {
   display:none !important;
 }
