--- a/common/common.scss
+++ b/common/common.scss
@@ -590,8 +590,8 @@ li.sidebar-section-link-wrapper[data-tag-name*='hide-'],
 /********************** SHOW DEFAULT ELEMENTS **********************/
 
 
-.tag-show-timeline {
-  .tag-hide-all-but-topic-body .topic-navigation.with-timeline {
+.tag-hide-all-but-topic-body .tag-show-timeline {
+  .topic-navigation.with-timeline {
     display: block !important;
   }
 }
