--- a/common/common.scss
+++ b/common/common.scss
@@ -592,7 +592,7 @@ li.sidebar-section-link-wrapper[data-tag-name*='hide-'],
 
 .tag-hide-all-but-topic-body.tag-show-timeline {
   .container.posts {
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto !important;
   }
   div.container.posts .topic-navigation.with-timeline {
     display: block !important;
