--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,11 +206,12 @@ footer {
 
 table {
     border-collapse: collapse;
-    margin: 25px 0;
+    /* margin: 25px 0; */
     font-size: 0.9em;
     font-family: sans-serif;
+    width: 100%;
     min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
 }
 
 table thead tr {
