--- a/common/common.scss
+++ b/common/common.scss
@@ -4,6 +4,7 @@
 
 /* HIDE hide- TAGS IN UI */
 
+div.tag-box[data-tag-name*='hide-'],
 li.sidebar-section-link-wrapper[data-tag-name*='layout-'],
 li.sidebar-section-link-wrapper[data-tag-name*='hide-'],
 .tags-list.tag-list.tag-group-layout-tags,
